--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,24 @@
 body{
   background-color: black;
+  box-sizing: border-box;
 }
+
+div{
+  box-sizing: border-box;
+}
+
 
 .font {
   font-family: Montserrat;
 }
 
 .img-airport{
+  width: 100%;
+  height: 1080px;
   background-image: url("../img/irport_raw.png");
+  background-size: 100% 100%;
+}
+
+.aasdasd{
   height: 100vh;
 }
