--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,18 @@ div{
   background-image: url("../img/irport_raw.png");
   background-size: 100% 100%;
 }
+.img-tunel{
+  width: 100%;
+  height: 1080px;
+  background-image: url("../img/tunel_raw.png");
+  background-size: 100% 100%;
+}
+.img-fish{
+  width: 100%;
+  height: 1080px;
+  background-image: url("../img/fish.png");
+  background-size: 100% 100%;
+}
 
 .aasdasd{
   height: 100vh;
